Some minimal changes

--- a/App.ejs
+++ b/App.ejs
@@ -41,7 +41,7 @@
         <!-- BANNER SECTION -->
         <section class="banner flex flex-col items-center justify-center mx-5 mt-6">
             <div id="banner-container"
-                class="banner_component w-full max-w-7xl h:48 sm:h-60 md:h-64 lg:h-[50vh] flex items-center justify-center text-3xl font-semibold text-gray-700 select-none">
+                class="banner_component w-full max-w-7xl h:48 sm:h-60 md:h-64 lg:h-96 overflow-hidden flex items-center justify-center text-3xl font-semibold text-gray-700 select-none">
                 <button aria-label="Previous Banner" id="prevSlide"
                     class="bg-white md:block hidden z-10 p-2 h-24 md:h-48 shadow hover:bg-gray-100 focus:outline-none">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-600" fill="none"
@@ -50,7 +50,7 @@
                     </svg>
                 </button>
                 <div
-                    class="bg-gray-300 rounded shadow-lg overflow-hidden z-40 w-full max-w-7xl h-48 sm:h-60 md:h-64 lg:h-[50vh] flex items-center justify-center text-3xl font-semibold text-gray-700 select-none">
+                    class="bg-gray-300 rounded shadow-lg overflow-hidden z-40 w-full max-w-7xl h-48 sm:h-60 md:h-64 lg:h-96 flex items-center justify-center text-3xl font-semibold text-gray-700 select-none">
                     <img id="banner-img" class="w-full h-full object-cover" src="image/banner/banner0.jpg"
                         alt="banner_img">
                     <!-- <div class="text-3xl font-semibold text-gray-700 select-none">
